--- a/src/index.css
+++ b/src/index.css
@@ -32,4 +32,5 @@
 
 .DockerTS-DockContent {
     outline: 1px solid rgba(0, 0, 0, 0.15);
+    overflow: hidden;
 }
